Fixed accesibility issue with low contrasting font

--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -5,7 +5,7 @@ $font-size: 24px;
 $font-line-height: 1.5;
 
 $font-color: #222;
-$font-color-light: #a9a9a9;
+$font-color-light: #949494;
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300|Roboto:300&display=swap');
 $font-family: 'Roboto', sans-serif;
